app/src/main/java/com/example/jokeapp/domain/Errors/ServiceUnavailable.kt
package com.example.jokeapp.domain.Errors

import com.example.jokeapp.R
import com.example.jokeapp.core.resources.ResourceManager

class ServiceUnavailable : BaseJokeFailure() {
    override fun getMessage(): String {
        TODO("Not yet implemented")
    }

}